Addressed FindBugs warnings